--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -197,10 +197,10 @@
             <div class="row my-4 text-white">
                <div class="col">
                   <h3>Update the above Calendar Heatmap</h3>
-                  <button class="btn btn-secondary btn-sm" id="heatmap-5-random">Random Dates</button>
-                  <button class="btn btn-secondary btn-sm" id="heatmap-5-empty">Empty</button>
-                  <button class="btn btn-secondary btn-sm" id="heatmap-5-append">Append Dates</button>
-                  <button class="btn btn-secondary btn-sm" id="heatmap-5-wkday">Toggle Weekdays</button>
+                  <button class="btn btn-secondary btn-sm mt-2" id="heatmap-5-random">Random Dates</button>
+                  <button class="btn btn-secondary btn-sm mt-2" id="heatmap-5-empty">Empty</button>
+                  <button class="btn btn-secondary btn-sm mt-2" id="heatmap-5-append">Append Dates</button>
+                  <button class="btn btn-secondary btn-sm mt-2" id="heatmap-5-wkday">Toggle Weekdays</button>
                </div>
             </div>
 
