--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -26,6 +26,9 @@
 
    <!-- Calender Heatmap Plugin -->
    <link rel="stylesheet" type="text/css" href="css/jquery.CalendarHeatmap.css">
+   
+   <!-- Calender (Monthly View)-->
+   <link rel="stylesheet" type="text/css" href="css/calendar-gc.css">
 </head>
 
 <body>
@@ -188,13 +191,13 @@
             </div>
 
             <!-- Calendar HeatMap-->
-            <div class="row my-4">
+            <div class="row my-4 py-2 bg-color rounded">
                <div class="col calender_heatmap">
                   <div id="heatmap-5"></div>
                </div>
             </div>
 
-            <div class="row my-4 text-white">
+            <div class="row my-4 py-2 text-white bg-color rounded">
                <div class="col">
                   <h3>Update the above Calendar Heatmap</h3>
                   <button class="btn btn-secondary btn-sm mt-2" id="heatmap-5-random">Random Dates</button>
@@ -204,6 +207,14 @@
                </div>
             </div>
 
+            <!-- 1 month Calendar detail view and All Stats-->
+            <div class="row mx-2 mb-2" id="Bottom_Part">
+               <div class="col-lg-4 bg-color rounded" id="one_month_calendar">
+                  <div id="calendar" style="padding: 0.5rem;"></div>
+               </div>
+               <div class="ms-4 col-lg bg-color rounded" id="All_stats">
+               </div>
+            </div>
 
             <!-- Chat Box (at the end)-->
             <div class="chat_slide_wrapper">
@@ -257,8 +268,10 @@
                   <tr>
                      <td>Trade Type:</td>
                      <td class="d-flex align-items-center">
-                        <input class="mx-2 custom-radio" type="radio" name="flexRadioDefault" id="flexRadioDefault1">Long &nbsp;&nbsp;&nbsp;
-                        <input class="mx-2 custom-radio" type="radio" name="flexRadioDefault" id="flexRadioDefault2">Short
+                        <input class="mx-2 custom-radio" type="radio" name="flexRadioDefault"
+                           id="flexRadioDefault1">Long &nbsp;&nbsp;&nbsp;
+                        <input class="mx-2 custom-radio" type="radio" name="flexRadioDefault"
+                           id="flexRadioDefault2">Short
                      </td>
                   </tr>
                   <tr>
@@ -271,7 +284,12 @@
                   </tr>
                   <tr>
                      <td>Symbol/Ticker:</td>
-                     <td><input type="text" id="Symbol_Ticker" name="Symbol_Ticker"></td>
+                     <td>
+                        <div class="dropdown">
+                           <input type="text" id="Symbol_Ticker" placeholder="Type here..." class="placeholder-color">
+                           <div id="suggestionDropdown" class="dropdown-content"></div>
+                        </div>
+                     </td>
                   </tr>
                   <tr>
                      <td>Entry Price:</td>
@@ -359,6 +377,9 @@
 
    <!-- Calender Heatmap Plugin -->
    <script src="js/jquery.CalendarHeatmap.js"></script>
+   
+   <!-- Calender (Monthly View)-->
+   <script src="js/calendar-gc.js"></script>
 
    <!-- Manual Jquery -->
    <script>
