--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -26,7 +26,7 @@
 
    <!-- Calender Heatmap Plugin -->
    <link rel="stylesheet" type="text/css" href="css/jquery.CalendarHeatmap.css">
-   
+
    <!-- Calender (Monthly View)-->
    <link rel="stylesheet" type="text/css" href="css/calendar-gc.css">
 </head>
@@ -191,13 +191,13 @@
             </div>
 
             <!-- Calendar HeatMap-->
-            <div class="row my-4 py-2 bg-color rounded">
+            <div class="row my-2 py-2 bg-color rounded">
                <div class="col calender_heatmap">
                   <div id="heatmap-5"></div>
                </div>
             </div>
 
-            <div class="row my-4 py-2 text-white bg-color rounded">
+            <div class="row my-2 py-2 text-white bg-color rounded">
                <div class="col">
                   <h3>Update the above Calendar Heatmap</h3>
                   <button class="btn btn-secondary btn-sm mt-2" id="heatmap-5-random">Random Dates</button>
@@ -212,7 +212,7 @@
                <div class="col-lg-4 bg-color rounded" id="one_month_calendar">
                   <div id="calendar" style="padding: 0.5rem;"></div>
                </div>
-               <div class="ms-4 col-lg bg-color rounded" id="All_stats">
+               <div class="ms-2 col-lg bg-color rounded" id="All_stats">
                </div>
             </div>
 
@@ -268,10 +268,10 @@
                   <tr>
                      <td>Trade Type:</td>
                      <td class="d-flex align-items-center">
-                        <input class="mx-2 custom-radio" type="radio" name="flexRadioDefault"
-                           id="flexRadioDefault1">Long &nbsp;&nbsp;&nbsp;
-                        <input class="mx-2 custom-radio" type="radio" name="flexRadioDefault"
-                           id="flexRadioDefault2">Short
+                        Long <label class="switch">
+                           <input type="checkbox">
+                           <span class="slider"></span>
+                        </label> Short
                      </td>
                   </tr>
                   <tr>
@@ -303,10 +303,26 @@
                      <td>Quantity:</td>
                      <td><input type="number" id="Quantity" name="Quantity"></td>
                   </tr>
+                  <tr>
+                     <td>How did you find the trade ?</td>
+                     <td><textarea rows="3" id="Find_Trade" name="Find_Trade"></textarea></td>
+                  </tr>
+                  <tr>
+                     <td>Entry Reason:</td>
+                     <td><textarea rows="3" id="Entry_reason" name="Entry_reason"></textarea></td>
+                  </tr>
+                  <tr>
+                     <td>Exit Reason:</td>
+                     <td><textarea rows="3" id="Exit_reason" name="Exit_reason"></textarea></td>
+                  </tr>
+                  <tr>
+                     <td>Mistakes made / Lessons learned</td>
+                     <td><textarea rows="3" id="Mistakes" name="Mistakes"></textarea></td>
+                  </tr>
                </table>
             </div>
             <div class="modal-footer border-top-0">
-               <button type="button" class="btn btn-outline-warning">View</button>
+               <button type="button" class="btn btn-outline-light">View</button>
             </div>
          </div>
       </div>
@@ -334,7 +350,7 @@
                </table>
             </div>
             <div class="modal-footer border-top-0">
-               <button type="button" class="btn btn-outline-warning">View</button>
+               <button type="button" class="btn btn-outline-light">View</button>
             </div>
          </div>
       </div>
@@ -377,7 +393,7 @@
 
    <!-- Calender Heatmap Plugin -->
    <script src="js/jquery.CalendarHeatmap.js"></script>
-   
+
    <!-- Calender (Monthly View)-->
    <script src="js/calendar-gc.js"></script>
 
