--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -256,7 +256,7 @@
 
    <!-- Modal - (Add trade inputs) -->
    <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-      style="overflow-y: hidden !important;">
+      style="overflow-y: auto !important;">
       <div class="modal-dialog bg-faint">
          <div class="modal-content bg-color border">
             <div class="modal-header border-bottom-0">
