--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -255,8 +255,7 @@
    </footer>
 
    <!-- Modal - (Add trade inputs) -->
-   <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-      style="overflow-y: auto !important;">
+   <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog bg-faint">
          <div class="modal-content bg-color border">
             <div class="modal-header border-bottom-0">
@@ -329,8 +328,7 @@
    </div>
 
    <!-- Modal - (Select Date Range) -->
-   <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-      style="overflow-y: hidden !important;">
+   <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog bg-faint">
          <div class="modal-content bg-color border">
             <div class="modal-header border-bottom-0">
