--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -189,7 +189,6 @@
                                  id="add_trade" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal1">Add
                                  Trade (+)</button>
                            </div>
-
                         </div>
                      </div>
                   </div>
@@ -421,20 +420,6 @@
                            <div class="p-2 flex-shrink-1 d-flex align-items-center text-light"><i
                                  class="fa-solid fa-rotate-right bar_chart"></i></div>
                         </div>
-
-                        <!-- <div class="d-flex flex-row-reverse align-items-center my-0 py-0">
-                           <div
-                              class="p-2 h-100 me-3 px-0 bg-color text-light d-flex justify-content-center button_height">
-                              <button class="px-4 go_btn bg-color text-white font-weight-bold w-100 h-100 rounded"
-                                 id="individual_day_curve" type="button">Daily P&L</button>
-                           </div>
-                           <div
-                              class="p-2 h-100 me-3 px-0 bg-color text-light d-flex justify-content-center button_height">
-                              <button
-                                 class="px-4 gb_active go_btn bg-color text-white font-weight-bold w-100 h-100 rounded"
-                                 id="equity_curve" type="button">Equity Curve</button>
-                           </div>
-                        </div> -->
                      </div>
                   </div>
                   <div class="mt-3 col calender_heatmap">
@@ -450,30 +435,137 @@
                   <h3 class="mt-2 text-center text-light">Day-Wise Breakup</h3>
                   <div id="bar_chart_apexchart" style="padding: 0.5rem;"></div>
                </div>
-               <div class="ms-2 mt-2 col-lg bg-color rounded px-1" id="winner_losser1">
+               <div class="ms-2 mt-2 col-lg bg-color rounded px-1" id="monthly_breakup" style="width:74%">
                   <h3 class="mt-2 text-center text-light">Monthly Breakup</h3>
-                  <div class="px-0 text-center bg-color1 rounded" style="width:100%; overflow-x:auto">
-                     <table class="mx-0 my-0 px-0" style="font-size: 12px; font-weight: bold;" id="Monthly_dataTable">
-                        <thead class="py-2" style="color:#a9fff8">
+                  <div class="row" style="display: flex;">
+                     <div class="px-0 text-center bg-color1 rounded" style="overflow-x:auto">
+                        <table class="mx-0 my-0 px-0" style="font-size: 12px; font-weight: bold;"
+                           id="Monthly_dataTable">
+                           <thead class="py-2" style="color:#a9fff8">
+                              <tr>
+                                 <td style="max-width:70px">Year</td>
+                                 <td style="max-width:70px">Jan</td>
+                                 <td style="max-width:70px">Feb</td>
+                                 <td style="max-width:70px">Mar</td>
+                                 <td style="max-width:70px">Apr</td>
+                                 <td style="max-width:70px">May</td>
+                                 <td style="max-width:70px">Jun</td>
+                                 <td style="max-width:70px">Jul</td>
+                                 <td style="max-width:70px">Aug</td>
+                                 <td style="max-width:70px">Sep</td>
+                                 <td style="max-width:70px">Oct</td>
+                                 <td style="max-width:70px">Nov</td>
+                                 <td style="max-width:70px">Dec</td>
+                                 <td style="max-width:70px">Total</td>
+                              </tr>
+                           </thead>
+                           <tbody class="px-2" style="background-color: #1c1c1c;"></tbody>
+                        </table>
+                     </div>
+                  </div>
+               </div>
+            </div>
+
+            <!-- Chart & Table -->
+            <div class="row mx-2 mb-2" id="Top_winner_losser">
+               <div class="mt-2 col-lg-6 bg-color rounded px-0" id="Top_Winner">
+                  <h3 class="mt-2 text-center text-light">Top Winner</h3>
+                  <div class="mb-3 row selected_range text-light">
+                     <div class="px-0 text-center bg-color1 rounded col mx-2">
+                        <table class="mx-0 my-2 px-0" style="font-size: x-large; font-weight: bold;">
                            <tr>
-                              <td>Year</td>
-                              <td>Jan</td>
-                              <td>Feb</td>
-                              <td>Mar</td>
-                              <td>Apr</td>
-                              <td>May</td>
-                              <td>Jun</td>
-                              <td>Jul</td>
-                              <td>Aug</td>
-                              <td>Sep</td>
-                              <td>Oct</td>
-                              <td>Nov</td>
-                              <td>Dec</td>
-                              <td>Total</td>
+                              <td style="font-size: large; font-weight: bold;">
+                                 <span id="Top_Winner_1_Name">Winner 1</span>
+                              </td>
                            </tr>
-                        </thead>
-                        <tbody class="px-2" style="background-color: #1c1c1c;"></tbody>
-                     </table>
+                           <tr>
+                              <td class="answer_td"
+                                 style="font-size: xx-large; font-weight: 400; color: rgb(123, 219, 123);">
+                                 <span id="Top_Winner_1_Value">------</span>
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
+                     <div class="px-0 text-center bg-color1 rounded col mx-2">
+                        <table class="mx-0 my-2 px-0" style="font-size: x-large; font-weight: bold;">
+                           <tr>
+                              <td style="font-size: large; font-weight: bold;">
+                                 <span id="Top_Winner_2_Name">Winner 2</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <td class="answer_td"
+                                 style="font-size: xx-large; font-weight: 400; color: rgb(123, 219, 123);">
+                                 <span id="Top_Winner_2_Value">------</span>
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
+                     <div class="px-0 text-center bg-color1 rounded col mx-2">
+                        <table class="mx-0 my-2 px-0" style="font-size: x-large; font-weight: bold;">
+                           <tr>
+                              <td style="font-size: large; font-weight: bold;">
+                                 <span id="Top_Winner_3_Name">Winner 3</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <td class="answer_td"
+                                 style="font-size: xx-large; font-weight: 400; color: rgb(123, 219, 123);">
+                                 <span id="Top_Winner_3_Value">------</span>
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
+                  </div>
+               </div>
+               <div class="ms-2 mt-2 col-lg bg-color rounded px-1" id="Top_Losser">
+                  <h3 class="mt-2 text-center text-light">Top Losser</h3>
+                  <div class="mb-3 row selected_range text-light">
+                     <div class="px-0 text-center bg-color1 rounded col mx-2">
+                        <table class="mx-0 my-2 px-0" style="font-size: x-large; font-weight: bold;">
+                           <tr>
+                              <td style="font-size: large; font-weight: bold;">
+                                 <span id="Top_Losser_1_Name">Losser 1</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <td class="answer_td"
+                                 style="font-size: xx-large; font-weight: 400; color: rgb(252, 92, 93);">
+                                 <span id="Top_Losser_1_Value">------</span>
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
+                     <div class="px-0 text-center bg-color1 rounded col mx-2">
+                        <table class="mx-0 my-2 px-0" style="font-size: x-large; font-weight: bold;">
+                           <tr>
+                              <td style="font-size: large; font-weight: bold;">
+                                 <span id="Top_Losser_2_Name">Losser 2</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <td class="answer_td"
+                                 style="font-size: xx-large; font-weight: 400; color: rgb(252, 92, 93);">
+                                 <span id="Top_Losser_2_Value">------</span>
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
+                     <div class="px-0 text-center bg-color1 rounded col mx-2">
+                        <table class="mx-0 my-2 px-0" style="font-size: x-large; font-weight: bold;">
+                           <tr>
+                              <td style="font-size: large; font-weight: bold;">
+                                 <span id="Top_Losser_3_Name">Losser 3</span>
+                              </td>
+                           </tr>
+                           <tr>
+                              <td class="answer_td"
+                                 style="font-size: xx-large; font-weight: 400; color: rgb(252, 92, 93);">
+                                 <span id="Top_Losser_3_Value">------</span>
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
                   </div>
                </div>
             </div>
@@ -503,6 +595,33 @@
          </div>
       </div>
       <!-- main-panel ends -->
+   </div>
+
+   <!-- Toast (Alerts)-->
+   <div class="toast-container position-fixed top-0 end-0 p-3">
+      <div class="toast align-items-center bg-warning text-warning" id="toast-alert" role="alert" aria-live="assertive"
+         aria-atomic="true">
+         <div class="d-flex">
+            <div class="toast-body toast-body_1" style="font-weight: 500;">
+            </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+         </div>
+      </div>
+   </div>
+
+   <!-- Toast (Confirm)-->
+   <div class="toast-container position-fixed top-0 end-0 p-3">
+      <div class="toast align-items-center bg-danger text-danger" id="toast-delete" role="alert" aria-live="assertive"
+         aria-atomic="true">
+         <div class="toast-body" style="font-weight: 500;">
+            Are you Sure ?
+            <div class="mt-2 pt-2 border-top d-flex justify-content-end">
+               <button type="button" class="btn btn-danger btn-sm" id="Yes_button_Clicked"
+                  onclick="confirm_yes()">Yes</button>
+               <button type="button" class="ms-2 btn btn-dark btn-sm" data-bs-dismiss="toast">No</button>
+            </div>
+         </div>
+      </div>
    </div>
 
 
@@ -634,17 +753,8 @@
       </div>
    </div>
 
-   <!-- Modal - (Alerts Modal) -->
-   <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-         <div class="modal-content bg-color">
-            <div class="modal-body rounded bg-danger text-white" style="font-weight: 500;"></div>
-            <div class="modal-footer bg-faint border-top-0">
-               <button type="button" class="btn btn-secondary" id="close_alert_modal" data-bs-dismiss="modal">OK</button>
-            </div>
-         </div>
-      </div>
-   </div>
+   <!-- Toast - (For Alerts and Confirm) -->
+
 
 
 
