--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -36,10 +36,6 @@
    <!-- DataTable-->
    <link rel="stylesheet" type="text/css" href="css/datatables.css">
 
-   <!-- chart.js-->
-   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-   <script src="js/chartjs-plugin-crosshair.js"></script>
-
 </head>
 
 <body>
@@ -185,7 +181,7 @@
                                  data-bs-target="#exampleModal2">Date Range Selector 📆</button>
                            </div>
                            <div class="p-2 h-100 mx-3 px-0 text-light button_height">
-                              <button class="go_btn bg-color text-white font-weight-bold w-100 h-100 rounded"
+                              <button class="go_btn bg-color text-white font-weight-bold w-100 h-100 rounded Modal_Open"
                                  id="add_trade" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal1">Add
                                  Trade (+)</button>
                            </div>
@@ -418,10 +414,10 @@
                   <h3 class="mt-2 text-center text-light">Day-Wise Breakup</h3>
                   <div id="bar_chart_apexchart" style="padding: 0.5rem;"></div>
                </div>
-               <div class="ms-2 mt-2 col-lg bg-color rounded px-1" id="monthly_breakup" style="width:74%">
+               <div class="ms-2 mt-2 col-lg bg-color rounded px-1" id="monthly_breakup">
                   <h3 class="mt-2 text-center text-light">Monthly Breakup</h3>
                   <div class="row" style="display: flex;">
-                     <div class="px-0 text-center bg-color1 rounded" style="overflow-x:auto">
+                     <div class="px-0 text-center bg-color1 rounded">
                         <table class="mx-0 my-0 px-0" style="font-size: 12px; font-weight: bold;"
                            id="Monthly_dataTable">
                            <thead class="py-2" style="color:#a9fff8">
@@ -460,7 +456,7 @@
                         <div class="p-2 flex-shrink-1 d-flex align-items-center"><i
                               class="fa-solid fa-rotate-right data_Table_1"></i></div>
                      </div>
-                     <div class="px-0 text-center bg-color1 rounded col" style="width:100%; overflow-x:auto">
+                     <div class="px-0 text-center bg-color1 rounded col">
                         <table class="mx-0 my-0 px-0" style="font-size: 12px; font-weight: bold;" id="dataTable">
                            <thead class="py-2" style="color:#a9fff8">
                               <tr>
@@ -473,6 +469,7 @@
                                  <td>Quantity</td>
                                  <td>Type</td>
                                  <td>Return</td>
+                                 <td>ROC %</td>
                                  <td>Action</td>
                               </tr>
                            </thead>
@@ -626,21 +623,6 @@
       </div>
    </div>
 
-   <!-- Toast (Confirm)-->
-   <div class="toast-container position-fixed top-0 end-0 p-3">
-      <div class="toast align-items-center bg-danger text-danger" id="toast-delete" role="alert" aria-live="assertive"
-         aria-atomic="true">
-         <div class="toast-body" style="font-weight: 500;">
-            Are you Sure ?
-            <div class="mt-2 pt-2 border-top d-flex justify-content-end">
-               <button type="button" class="btn btn-danger btn-sm" id="Yes_button_Clicked"
-                  onclick="confirm_yes()">Yes</button>
-               <button type="button" class="ms-2 btn btn-dark btn-sm" data-bs-dismiss="toast">No</button>
-            </div>
-         </div>
-      </div>
-   </div>
-
 
 
    <footer class="footer">
@@ -660,7 +642,7 @@
          <div class="modal-content bg-color border-0">
             <div class="modal-header border-bottom-0">
                <h1 class="modal-title fs-5 text-light" id="exampleModalLabel">Add Trade Inputs:</h1>
-               <button type="button" id="add_n_update_trade_close" class="btn-close bg-white bg-faint"
+               <button type="button" id="add_n_update_trade_close" class="btn-close bg-white bg-faint close_modal"
                   data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body bg-faint">
@@ -766,7 +748,8 @@
                </table>
             </div>
             <div class="modal-footer border-top-0">
-               <button type="button" class="btn btn-secondary bg-faint" data-bs-dismiss="modal">Close</button>
+               <button type="button" class="btn btn-secondary bg-faint close_modal"
+                  data-bs-dismiss="modal">Close</button>
                <button type="button" class="btn btn-secondary bg-faint" id="add_trade_submit">Submit</button>
                <button type="button" class="btn btn-secondary d-none bg-faint" id="update_trade_submit">Update</button>
             </div>
@@ -811,7 +794,29 @@
       </div>
    </div>
 
-
+   <!-- Modal - (Select Date Range) -->
+   <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+         <div class="modal-content bg-color border-0">
+            <div class="modal-header border-bottom-0">
+               <h1 class="modal-title fs-5 text-light" id="exampleModalLabe3">Delete Confirmation</h1>
+               <button type="button" id="delete_trade_close" class="btn-close bg-white bg-faint close_modal"
+                  data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body bg-faint">
+               <div class="d-flex justify-content-center"><i class="fa-solid fa-circle-exclamation fa-6x"></i></div>
+               <h1 class="text-center">Confirm</h1>
+               <p class="text-center mb-0">Are you sure want to permanently delete this Trade?</p>
+            </div>
+            <div class="modal-footer border-top-0">
+               <button type="button" class="btn btn-secondary bg-faint close_modal"
+                  data-bs-dismiss="modal">Cancel</button>
+               <button type="button" class="btn btn-danger" id="delete_trade_submit"
+                  onclick="confirm_yes()">Delete</button>
+            </div>
+         </div>
+      </div>
+   </div>
 
 
    <!-- Google tag (gtag.js) -->
@@ -862,6 +867,10 @@
 
    <!-- Apexchart -->
    <script src="js/apexcharts.js"></script>
+
+   <!-- chart.js-->
+   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+   <script src="js/chartjs-plugin-crosshair.js"></script>
 
    <!-- Manual Jquery -->
    <script>
