--- a/tredcode_console.html
+++ b/tredcode_console.html
@@ -200,7 +200,7 @@
 
             <!-- Equity Curve -->
             <div class="row mx-2 mb-2" id="equity_curve_container" style="display: none;">
-               <div class="col-lg-12 mt-2 bg-color rounded" id="Equity_curve_div">
+               <div class="col-lg-12 bg-color rounded" id="Equity_curve_div">
                   <div class="px-0 py-0 col-12">
                      <div class="px-0 container-fluid">
 
@@ -410,7 +410,7 @@
 
             <!-- Chart (day wise chart) & Table (Montlty table)-->
             <div class="row mx-2 mb-2" id="day_chart_and_monthly_table" style="display: none;">
-               <div class="mt-2 col-lg-3 bg-color rounded px-0" id="bar_chart">
+               <div class="col-lg-3 bg-color rounded px-0" id="bar_chart">
                   <h3 class="mt-2 text-center text-light">Day-Wise Breakup</h3>
                   <div id="bar_chart_apexchart" style="padding: 0.5rem;"></div>
                </div>
@@ -482,7 +482,7 @@
 
             <!-- Top Winner and Top Losser -->
             <div class="row mx-2 mb-2" id="Top_winner_losser">
-               <div class="mt-2 col-lg-6 bg-color rounded px-0" id="Top_Winner">
+               <div class="col-lg-6 bg-color rounded px-0" id="Top_Winner">
                   <h3 class="mt-2 text-center text-light">Top Winner</h3>
                   <div class="mb-3 row selected_range text-light">
                      <div class="px-0 text-center bg-color1 rounded col mx-2">
@@ -532,7 +532,7 @@
                      </div>
                   </div>
                </div>
-               <div class="ms-2 mt-2 col-lg bg-color rounded px-1" id="Top_Losser">
+               <div class="ms-2 col-lg bg-color rounded px-1" id="Top_Losser">
                   <h3 class="mt-2 text-center text-light">Top Losser</h3>
                   <div class="mb-3 row selected_range text-light">
                      <div class="px-0 text-center bg-color1 rounded col mx-2">
